# fireballpy

./: .f2py_f2cmap  .gitignore  CMakeLists.txt  CMakeLists_ifort.txt  README.md  TODO  env.yml  install.py  install.sh  install_meson.sh  libf2py.f90  meson.build  meson.options  nomodules.py  pyproject.toml  remake.sh  requirements.txt
.old/: CMakeLists.txt  broyden.f90  interpolate_2d.old.f90  louie.f90  nglview.ipynb  nomodules.py  pulay.f90  remake.sh  requirements.txt
ase_prueba/: __init__.py  _infodat.py  _zsymbol.py  example.bas  fireball.py  infodat.py  retro.py
examples/: C-dia.ipynb  Si.ipynb  Si_bands.ipynb  bands.ipynb  dinamic.ipynb  dos.ipynb  fireballpy_skeleton.ipynb  nglview.ipynb  optimize_BFGS.ipynb  optimize_FIRE.ipynb  pyreball_skeleton.ipynb  si7x7.ipynb  test.ipynb  wf_1d.ipynb  wf_2d.ipynb
fireballpy/: __init__.py  _correction.py  _dftd3.py  _errors.py  _fdata.py  _fireball.pyi  _options.py  _types.py  _utils.py  ase.py  atoms.py  fdata.py  fdata.toml  fireball.f90  fireball.py  fireballpy.py  infodat.py  kpoints.py  meson.build  orbitals.py  retro.py  utils.py  version.py
fireballpy/bands/: __init__.py  bandpath.py  meson.build
fireballpy/basis/: __init__.py  __main__.py  _begin.pyi  _wfs.pyi  begin.f90  create.f90  fdata.py  meson.build
fireballpy/basis/optimization/: cuby2fireball.py  optimize.py  score.py
fireballpy/outputs/: __init__.py  eigenvectors.py  hamiltonian.py  meson.build  orbitals.py
src/begin/: meson.build
src/begin/MODULES/: begin_input.f90  constants.f90  pp_storage.f90
src/begin/RCATMS/: clebsch_gordon.f90  derf0.f90  get_nlmesh_size.f90  get_psi.f90  get_vee.f90  integrate_hpsi.f90  pp.f90  psirc.f90  rcatms.f90  rcatms_DMOL.f90  rcatms_GSM.f90  rcatms_excite.f90  vshort.f90
src/begin/VNN/: get_ewfmesh_size.f90  get_wfmesh_size.f90  psiofr.f90  readpsi.f90  readpsi_excite.f90  vnn.f90  vnn_excite.f90
src/begin/XC/: Exx.f90  bpgcxc.f90  corlyp.f90  get_uxc.f90  gga91_sr.f90  ggacrad.f90  ggaxrad.f90  ldaxc.f90  lsdavwn.f90  pbe.f90
src/common/: constants.f90  indices.f90  math.f90  meson.build  utils.f90  xc.f90
src/create/: MPI.f90  MPI_stubs.f90  MPI_stuff.f90  Makefile  create.f  create.f90  diff_create-old  exchange.inc  meson.build  parameters.inc  potentials.f90  process.py  pseudopotentials.f90  pseudopotentials.inc  quadrature.inc  vnonneutral.inc  wavefunctions.f90  wavefunctions.inc
src/create/EXX/: clebsch_gordon.f90  factorial.f90  rprimeofr.f90  setup_clm.f90  x_1c.f90  xatom_2c.f90  xatom_2c_integral.f90  xatom_2c_rprime.f90  xontopl_2c.f90  xontopl_2c_integral.f90  xontopl_2c_rprime.f90  xontopr_2c.f90  xontopr_2c_integral.f90  xontopr_2c_rprime.f90
src/create/INITIALIZERS/: broadcast_MPI.f90  broadcast_noMPI.f90  finalize_MPI.f90  finalize_noMPI.f90  init_MPI.f90  init_noMPI.f90
src/create/INTEGRALS/: append_string.f90  exc1crho.f90  gaunt.f90  gauntReal.f90  gleg.f90  goverlap1c.f90  mk_index.f  mk_index.f90  mk_indexDipX.f  mk_indexDipX.f90  mk_indexDipY.f  mk_indexDipY.f90  mk_indexPP.f  mk_indexPP.f90  nuxc1crho.f90  onecenter.f90  onecenternuxc.f90  onecenternuxcs.f90  onecentervdip.f90  onecenterxc.f90  onecenterxc.f90.bak  onecenterxc.f90.bak90  radial_integral.f90  rescaled_psi.f90  threecenter.f90  threecenter_integral.f  threecenter_integral.f90  twocenter.f  twocenter.f90  twocenter_Pavel_old.f  twocenter_Pavel_old.f90  twocenter_integral.f  twocenter_integral.f90  twocenterxc.f90  xc1crho.f90  xc1crho.f90.bak  xc1crho.f90.bak90
src/create/INTERPOLATERS/: buildspline_1d.f90  dpsiofr.f  dpsiofr.f90  interpolate2d.f  interpolate2d.f90  psiofr.f  psiofr.f90  rprimeofr.f90  vnnaofr.f  vnnaofr.f90  vppofr.f  vppofr.f90
src/create/KINETIC/: Pintegral.f  Pintegral.f90  Tintegral.f  Tintegral.f90  bessel.f  bessel.f90  kinetic.f90  tree.f  tree.f90
src/create/MODULES/: coefficients.f90  constants.f90  dimensions.f90  math.f90  precision.f90  quadrature.f90  utils.f90  wavefunctions.f90  x_exact.f90
src/create/MODULES/math/: math_Ylm_impl.f90  math_lstsq_impl.f90
src/create/MODULES/utils/: utils_progress_bar.f90
src/create/READFILES/: iofile.f  iofile.f90  iofile2c.f90  iofile2c_x.f  iofile2c_x.f90  iofile2c_xcna.f90  iofile3c.f90  readcreate.f  readcreate.f90  readpsi.f  readpsi.f90  readtheory.f90  readvnn.f  readvnn.f90  readvpp.f  readvpp.f90
src/create/XC/: bpgcxc.f  bpgcxc.f90  cepal.f90  ceperley_alder.f90  corlyp1c.f90  corlyp2c.f90  density_calc.f  density_calc.f90  dexc.f  dexc.f90  dpotxc12.f  dpotxc12.f90  dpotxc12s.f  dpotxc12s.f90  dvxc.f  dvxc.f90  dvxc3c.f  dvxc3c.f90  get_potxc1c.f90  get_potxc2c.f90  gga91_sr.f  gga91_sr.f90  ggacrad1c.f90  ggacrad2c.f  ggacrad2c.f90  ggaxrad1c.f90  ggaxrad2c.f90  ldaxc.f  ldaxc.f90  lsdavwn.f90  pbe.f  pbe.f90  rho1c_store.f  rho1c_store.f90  rho2c_store.f  rho2c_store.f90  vxc.f  vxc.f90
src/fireball/: .M_system.f90.swp  M_constants.f90  M_fdata.f90  M_system.f90  meson.build
src/fireball/LOADFDATA/: .read_2c.f90.swp  buildspline_1d.f90  load_fdata.f90  make_munu.f90  make_munuDipX.f90  make_munuDipY.f90  make_munuPP.f90  make_munuS.f90  read_1c.f90  read_2c.f90  read_3c.f90  readdata_2c.f90  readdata_3c.f90  readheader_2c.f90  readheader_3c.f90  setterp_2d.f90
src/fireball/SYSTEM/: Dassemble_2c.f90  Dassemble_2c_PP.f90  Dassemble_3c.f90  Dassemble_3c_PP.f90  Dassemble_ca_2c.f90  Dassemble_ca_2c_dip.f90  Dassemble_ca_3c.f90  Dassemble_ca_3c_dip.f90  Dassemble_ca_olsxc_2c.f90  Dassemble_ca_olsxc_3c.f90  Dassemble_ca_olsxc_on.f90  Dassemble_lr.f90  Dassemble_lr_dip.f90  Dassemble_qmmm.f90  Dassemble_qmmm_dip.f90  Dassemble_qmmm_dip_new.f90  Dassemble_qmmm_new.f90  Dassemble_xc_2c.f90  Dtrescentros.f90  DtrescentrosS.f90  allocate_system.f90  anderson.f90  assemble_2c.f90  assemble_2c_PP.f90  assemble_3c.f90  assemble_3c_PP.f90  assemble_F.f90  assemble_ca_2c.f90  assemble_ca_2c_dip.f90  assemble_ca_3c.f90  assemble_ca_3c_dip.f90  assemble_drive.f90  assemble_lr.f90  assemble_lr_dip.f90  assemble_mcweda.f90  assemble_olsxc_1c.f90  assemble_olsxc_off.f90  assemble_olsxc_on.f90  assemble_qmmm.f90  assemble_qmmm_dip.f90  (+79 more)
(+302 files in other folders)
