[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "numpy"]

[project]
name = "fireballpy"
version = "0.0.2"
license = { file="LICENSE" }
authors = [
  { name="José Ortega Mateo", email="jose.ortega@uam.es" },
  { name="Linda Angela Zotti", email="linda.zotti@uam.es" },
  { name="Jesús Ignacio Mendieta Moreno", email="jesus.mendieta@uam.es" },
  { name="Daniel González Trabada", email="daniel.gonzalez@uam.es" },
  { name="Jorge Vega Martín", email="jorge.vega@uam.es" },
  { name="C. Roldán Piñero", email="carlos.roldanp@uam.es" },
]
description = "Minimalistic Fireball for Python"
readme = "README.md"
requires-python = ">=3.7,<3.13"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.21.0",
  "ase>=3.22.0",
  "tqdm>=4.66.0",
]
