[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = 'fireballpy'
version = '0.6.1.dev0'
license = { file = 'LICENSE' }
authors = [
  { name = 'José Ortega Mateo', email = 'jose.ortega@uam.es' },
  { name = 'Jesús Ignacio Mendieta Moreno', email = 'jesus.mendieta@uam.es' },
  { name = 'Daniel González Trabada', email = 'daniel.gonzalez@uam.es' },
  { name = 'Jorge Vega Martín', email = 'jorge.vega@uam.es' },
  { name = 'C. Roldán Piñero', email = 'carlos.roldanp@uam.es' },
]
description = 'Python interfase to the Fireball DFT code'
readme = 'README.md'
requires-python = '>=3.9, <3.13'
classifiers = [
  'Intended Audience :: Science/Research',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Fortran',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Physics'
]
dependencies = [
  'numpy >= 2.0.0',
  'scipy >= 1.7.0',
  'ase >= 3.22.0',
  'tqdm >= 4.40.0',
  'requests >= 2.31.0',
  'dftd3 >= 1.1.0',
  'tomli >= 1.1.0 ; python_version < "3.11"',
  'cyclopts >= 3.3.0',
]

[project.optional-dependencies]
docs = [
  'sphinx >= 8.0.0',
  'sphinx-design >= 0.6.0',
  'sphinx-copybutton >= 0.5.0',
  'sphinx-favicon >= 1.0.0',
  'numpydoc >= 1.8.0',
  'pydata-sphinx-theme >= 0.15.0',
]

[project.scripts]
fdata = 'fireballpy.basis.fdata:main'
