[build-system]
build-backend = 'mesonpy'
requires = ['meson-python>=0.16.0', 'numpy>=2.0.0', 'ninja>=1.0.0']

[project]
name = 'fireballpy'
version = '0.8.9dev0'
dynamic = ['license', 'license-files']
authors = [
  { name = 'José Ortega Mateo', email = 'jose.ortega@uam.es' },
  { name = 'Jesús Ignacio Mendieta Moreno', email = 'jesus.mendieta@uam.es' },
  { name = 'Daniel González Trabada', email = 'daniel.gonzalez@uam.es' },
  { name = 'Jorge Vega Martín', email = 'jorge.vega@uam.es' },
  { name = 'C. Roldán Piñero', email = 'carlos.roldanp@uam.es' },
]
description = 'Python interfase to the Fireball DFT code'
readme = 'README.md'
requires-python = '>=3.10, <3.13'
classifiers = [
  'Intended Audience :: Science/Research',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Fortran',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Physics'
]
dependencies = [
    "ase>=3.22.0",
    "cyclopts>=3.3.0",
    "dftd3>=1.1.0",
    "numpy>=2.0.0",
    "requests>=2.31.0",
    "scipy>=1.7.0",
    "tomli>=1.1.0",
    "tqdm>=4.40.0",
]

[project.scripts]
fdata = 'fireballpy.basis.fdata:main'

[dependency-groups]
dev = [
    "meson-python>=0.16.0",
    "numpy>=2.0.0",
    "ninja>=1.0.0",
]
docs = [
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.15.0",
    "sphinx>=8.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.6.0",
    "sphinx-favicon>=1.0.0",
    "sphinxcontrib-bibtex>=2.6.0",
]
jupyterlite = [
    "jupyterlite-pyodide-kernel>=0.2.0",
    "notebook>=7.0.0",
]

[tool.uv]
no-build-isolation = true
